@@ -1,3 +1,7 @@
+## Unreleased
+
+- Drop support for Python 3.8; declare support for Python 3.13
+
 ## 1.10.1
 
 * Add minimum version requirement (Python 3.8) to metadata
